test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET__api_private_ipinfo_2.snaphost
HTTP/2.0 200 OK
Content-Length: 38
Content-Type: application/json
Date: Mon, 26 May 2025 05:07:58 GMT
Referrer-Policy: strict-origin-when-cross-origin
Server: mdbws
Strict-Transport-Security: max-age=31536000; includeSubdomains;
X-Content-Type-Options: nosniff
X-Frame-Options: DENY
X-Java-Method: ApiPrivateIpInfoResource::getIpInfo
X-Java-Version: 17.0.14+7
X-Mongodb-Service-Version: gitHash=5c877a3e6985d68e81262a676a39db5818000f52; versionString=master
X-Permitted-Cross-Domain-Policies: none
X-Xgen-Up-Proto: HTTP/2

{"currentIpv4Address":"20.169.15.144"}